Fix an layout issue

--- a/example/src/index.scss
+++ b/example/src/index.scss
@@ -1,4 +1,4 @@
 
 body {
-  background-color: #fcfcfc;
+  background-color: #fbfbfb;
 }
