--- a/src/component/Message/index.scss
+++ b/src/component/Message/index.scss
@@ -16,7 +16,7 @@
     width: 1px;
     height: calc(100% - 2 * 25px);
     top: 25px;
-    background-color: white;
+    background-color: rgba(0, 43, 54, 0.15);
     position: absolute;
   }
   .tree-input-start, .tree-input-end {
