--- a/src/component/Tooltip/index.scss
+++ b/src/component/Tooltip/index.scss
@@ -1,6 +1,6 @@
 
 .tree-input-tooltip {
-  $tooltip-color: rgb(41, 41, 41);
+  $tooltip-color: rgb(62, 62, 62);
   position: absolute;
   max-width: 200px;
   background-color: $tooltip-color;
